Fix that fixes a previous fix that wasn't really a fix.